comments added for better understanding

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,30 @@
+# Sets the name of the application, used for identification in various Spring Boot features
 spring.application.name=journalApp
 
-# Server port
+# Configures the port on which the embedded server will run (default is 8080)
 server.port=8080
 
-#host
+# MongoDB host configuration (commented out as URI is used instead)
+# Specifies the hostname where MongoDB is running
 #spring.data.mongodb.host=localhost
 
-#port
+# MongoDB port configuration (commented out as URI is used instead)
+# Specifies the port on which MongoDB is listening
 #spring.data.mongodb.port=27017
 
-#connection link form mongodb atlas
+# MongoDB connection URI for MongoDB Atlas cloud service
+# This URI includes the username, password, cluster address, and connection options
 spring.data.mongodb.uri = mongodb+srv://shivsaini75006:1MnuPn9Ii9KDFXos@cluster0.o4rwhse.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
-#databse name if it does not exist it will be created automatically
+# Specifies the name of the MongoDB database to use
+# If the database doesn't exist, MongoDB will create it automatically when data is first inserted
 spring.data.mongodb.database=journaldb
 
-#for auto indexing
+# Enables automatic creation of indexes based on @Indexed annotations in entity classes
+# This is useful for optimizing queries but can slow down application startup
 spring.data.mongodb.auto-index-creation=true
 
-#if there exists a username and password on the database then we have to add them as well
+# MongoDB authentication configuration (commented out as credentials are included in the URI)
+# These properties would be used if authentication credentials were not included in the URI
 #spring.data.mongodb.username=myjournaluser
 #spring.data.mongodb.password=mypassword
